<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="356dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="654dp"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="199dp"
        tools:layout_editor_absoluteY="192dp">

        <Button
            android:id="@+id/task1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:onClick="onClick1"
            android:text="@string/_1"
            app:backgroundTint="#00BCD4"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/task2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:onClick="onClick2"
            android:text="@string/_2"
            app:backgroundTint="#00BCD4"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/task3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:onClick="onClick3"
            android:text="@string/_3"
            app:backgroundTint="#00BCD4"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/task4"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:onClick="onClick4"
            android:text="@string/_4"
            app:backgroundTint="#00BCD4"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/task5"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:onClick="onClick5"
            android:text="@string/_5"
            app:backgroundTint="#00BCD4"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/task6"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:onClick="onClick6"
            android:text="@string/_6"
            app:backgroundTint="#00BCD4"
            tools:ignore="OnClick" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>